SERVER-124272 FCV gate remaining setters of isTimeseries (#54252)

GitOrigin-RevId: 9fd51bc880ddbe7ccdd47216fab20a91cc316f7c